# seg-object

./: README.md
fusion_ros/: .cproject
fusion_ros/devel/: .catkin  .rosinstall
fusion_ros/devel/lib/pkgconfig/: seg.pc
fusion_ros/devel/lib/seg/: seg
fusion_ros/devel/share/seg/cmake/: segConfig.cmake
fusion_ros/src/seg/: CMakeLists.txt
fusion_ros/src/seg/src/: gridmap.h  image_show.cpp  image_show.h  main.cpp  pic_handle.cpp  pic_handle.h
image_process/: .cproject  .project  log
image_process/devel/: .catkin
image_process/devel/include/darknet_ros_msgs/: BoundingBox.h  BoundingBoxes.h  CheckForObjectsAction.h  CheckForObjectsActionFeedback.h  CheckForObjectsActionGoal.h  CheckForObjectsActionResult.h  CheckForObjectsFeedback.h  CheckForObjectsGoal.h  CheckForObjectsResult.h  ImageWithBBoxes.h  ObjectCount.h
image_process/devel/lib/image_process/: image_process
image_process/devel/lib/pkgconfig/: darknet_ros_msgs.pc  image_process.pc
image_process/devel/lib/python2.7/dist-packages/darknet_ros_msgs/msg/: _ImageWithBBoxes.py  __init__.py
image_process/devel/share/common-lisp/ros/darknet_ros_msgs/msg/: ImageWithBBoxes.lisp  _package.lisp  _package_ImageWithBBoxes.lisp  darknet_ros_msgs-msg.asd
image_process/devel/share/darknet_ros_msgs/cmake/: darknet_ros_msgs-msg-paths.cmake  darknet_ros_msgsConfig.cmake
image_process/devel/share/gennodejs/ros/darknet_ros_msgs/msg/: ImageWithBBoxes.js  _index.js
image_process/devel/share/image_process/cmake/: image_processConfig.cmake
image_process/devel/share/roseus/ros/darknet_ros_msgs/: manifest.l
image_process/devel/share/roseus/ros/darknet_ros_msgs/msg/: ImageWithBBoxes.l
image_process/src/darknet_ros_msgs/: CMakeLists.txt
image_process/src/darknet_ros_msgs/msg/: ImageWithBBoxes.msg
image_process/src/image_process/: CMakeLists.txt  package.xml
image_process/src/image_process/cmake/: FindDeepSort.cmake
image_process/src/image_process/src/: bbox_2d.cpp  bbox_2d.h  image_track.cpp  image_track.h  img_detection.cpp  img_detection.h  main.cpp  multi_object_tracking.cpp  multi_object_tracking.h  track_type.h  tracker_base.cpp  tracker_base.h  ukf.cpp  ukf.h
seg_obj/src/: gaus_blur.h
seg_obj_fast/: .cproject  Untitled Document
seg_obj_fast/.tracecompass/: .project
seg_obj_fast/src/: main.cpp  pic_handle.h
seg_obj_fast_ros/devel/lib/seg/: seg
seg_obj_fast_ros/src/seg/: CMakeLists.txt  package.xml
seg_obj_fast_ros/src/seg/src/: GpswithHeading.h  gridmap.cpp  gridmap.h  main.cpp  pic_handle.cpp  pic_handle.h
seg_obj_series/opencv_fst/: .cproject  .project  CMakeLists.txt  opencv_st.cpp
seg_obj_series/seg_ground/: .cproject  .project  CMakeLists.txt
seg_obj_series/seg_ground/src/: gridmap.cpp  gridmap.h  main.cpp  main_alter.cpp  pic_handle.cpp
seg_obj_series/seg_obj/: .cproject  CMakeLists.txt
seg_obj_series/seg_obj/src/: gridmap.cpp  gridmap.h  main.cpp  pic_handle.cpp  pic_handle.h
seg_obj_series/seg_obj_fast/: .cproject  CMakeLists.txt
seg_obj_series/seg_obj_fast (simple)/src/: gridmap.cpp  gridmap.h  main.cpp  pic_handle.cpp  pic_handle.h
seg_obj_series/seg_obj_fast (simple)/try_time/: seg_obj
seg_obj_series/seg_obj_fast/src/: gridmap.cpp  gridmap.h  pic_handle.cpp
seg_obj_series/seg_obj_fast/try_time/data/: 0000000001.pcd
seg_obj_series/seg_obj_fast_ros/: .cproject
seg_obj_series/seg_obj_fast_ros/devel/: .catkin
seg_obj_series/seg_obj_fast_ros/devel/lib/pkgconfig/: seg.pc
seg_obj_series/seg_obj_fast_ros/devel/share/seg/cmake/: segConfig.cmake
seg_obj_series/seg_obj_fast_ros/src/seg/src/: gridmap.cpp  main.cpp  pic_handle.cpp  pic_handle.h
